# ATD-ATR-Code

./: .gitignore  README.md  colab_training.ipynb  evaluate.py  kaggle_training.ipynb  pyproject.toml  requirements.txt  submit_slurm.sh  train.py  train_cluster.py
Notebooks/: analysis_results.ipynb
config/: classes.json  config.yaml  yolo_s.py
draft/: predict_gradcam.py  predict_old.py  predict_with_torchvision.py  predictold2.py  train.py
experiments/config/: classes.json  config.yaml
notebooks/: Inference.ipynb  Modifications_classes.ipynb  Predict.ipynb  Results_analysis.ipynb  Test.ipynb  Train_val.ipynb  analysis_results.ipynb
scene_generator/: GAN_main.py  SCENE_GENERATOR_USAGE.md  annotations.py  compose.py  extract.py  generate.py  verify.py
scripts/: predict.py  train.py  train_val.py  validation.py
src/: __init__.py  dataset.py  dataset_.py  gradcam.py  model.py  predict.py  predict_gradcam.py  train.py  train_val.py  transform.py  transforms.py  utils.py  validation.py  visualization.py
src/atr_sar.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/data/: dataset.py  transforms.py
src/models/: model.py
src/visualization/: gradcam.py  visualization.py
